# focus-deep-work-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  cliff.toml
.claude/: settings.local.json
.claude/skills/: create-pr.md
.githooks/: commit-msg
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  copilot.manifest.json  opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  lessons-learned.md
.specify/templates/: plan-template.md  tasks-template.md
scripts/: build-release.sh  release.sh
specs/001-focus-cli-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-readme-user-guide/: spec.md
specs/003-focus-tui-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-tui-session-controls/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-pomodoro-timer-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-tui-polish-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: config.rs  error.rs  lib.rs  main.rs
src/commands/: config.rs  export.rs  log.rs  mod.rs  pomo_stats.rs  report.rs  start.rs  status.rs  stop.rs
src/db/: mod.rs  pomodoro_store.rs  session_store.rs
src/display/: format.rs
tests/: integration.rs  unit.rs
(+71 files in other folders)
