[package]
name = "focus"
version = "0.2.2"
edition = "2021"

[[bin]]
name = "focus"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
dirs = "5"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
